change the ghaph architecture

--- a/graph NN/graph NN for pass prediction.ipynb
+++ b/graph NN/graph NN for pass prediction.ipynb
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a520e777",
+   "id": "7f94972d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1194c6f0",
+   "id": "dbb65023",
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "976e79e1",
+   "id": "14d8f63b",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f724215b",
+   "id": "d915f4c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3165ffd6",
+   "id": "9688cfb3",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "29ac3011",
+   "id": "10903806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5ea81a8a",
+   "id": "63b4da91",
    "metadata": {
     "scrolled": true
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4e20aeb5",
+   "id": "42dbac68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7b8c037e",
+   "id": "76d3e6f0",
    "metadata": {
     "scrolled": true
    },
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "924dc5db",
+   "id": "aa1eecda",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f040a2bc",
+   "id": "da8636a5",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3e0dd7ef",
+   "id": "2b82fda7",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e6995cca",
+   "id": "d8fa98f2",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "96fe3427",
+   "id": "15e7dfab",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c6772a88",
+   "id": "3f568df1",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6794eadc",
+   "id": "81523a4a",
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b775c359",
+   "id": "886cd9f3",
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "483ee2e4",
+   "id": "e8f0887d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "aa27583a",
+   "id": "97d03e3a",
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c89b647c",
+   "id": "7ff327ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1a6a23f3",
+   "id": "a3ccbddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "088b73e6",
+   "id": "4e64e08e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "92130d67",
+   "id": "4be1f6e2",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "39157940",
+   "id": "e6f08cf2",
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ee9c9339",
+   "id": "b4ff4a2a",
    "metadata": {},
    "outputs": [
     {
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4e4eefd7",
+   "id": "5e9ef830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a1e38536",
+   "id": "c4a1563f",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "18c521d0",
+   "id": "9580fe27",
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "16b3b928",
+   "id": "6e0550f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270fe89b",
+   "id": "f159766a",
    "metadata": {},
    "source": [
     "# Construct edges"
@@ -1714,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "20469368",
+   "id": "1f98a229",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1724,7 +1724,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "887a3667",
+   "id": "f8495e29",
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d3aeb9cd",
+   "id": "1d54a66a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ca3e70db",
+   "id": "f9475085",
    "metadata": {},
    "outputs": [
     {
@@ -1796,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "effd202b",
+   "id": "ff416f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f41214fd",
+   "id": "e8100d1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7a7f10c3",
+   "id": "7c3d9fae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1831,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e60e112b",
+   "id": "3e87c1e1",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cc753c98",
+   "id": "d601974f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "44dd2dd2",
+   "id": "6fd654da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d1f51691",
+   "id": "90d574ab",
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2052,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1eebae4d",
+   "id": "72b19a75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2073,7 +2073,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c77edd94",
+   "id": "8537df77",
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffbb5f5a",
+   "id": "64f997cb",
    "metadata": {},
    "source": [
     "# GNN training"
@@ -2102,7 +2102,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5834e405",
+   "id": "17ef0a97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "c30ce4a0",
+   "id": "e17d971a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2155,7 +2155,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "14d041f9",
+   "id": "67d68882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6c099967",
+   "id": "13628bea",
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "7be28285",
+   "id": "aa56feed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,7 +2204,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b80f4bd9",
+   "id": "e89c503f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cc90e046",
+   "id": "81fa9630",
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2236,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "14e9cb4f",
+   "id": "94a81194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2247,7 +2247,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "80745246",
+   "id": "a4dbb311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2258,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3c2a3a34",
+   "id": "30ac876b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2554,7 +2554,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "fb2b984d",
+   "id": "53511ccc",
    "metadata": {},
    "outputs": [
     {
@@ -2655,7 +2655,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "612146ba",
+   "id": "cc150e05",
    "metadata": {},
    "outputs": [
     {
@@ -2685,7 +2685,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "028c0772",
+   "id": "30474e16",
    "metadata": {},
    "outputs": [
     {
@@ -2709,7 +2709,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "00d3de6b",
+   "id": "2efe4827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2746,7 +2746,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "ebf85589",
+   "id": "1b5b96d1",
    "metadata": {},
    "outputs": [
     {
@@ -2963,7 +2963,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "2f1eef3c",
+   "id": "9da9ea65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2985,7 +2985,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "9e6c9437",
+   "id": "04679e42",
    "metadata": {},
    "outputs": [
     {
@@ -3201,8 +3201,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "id": "bc01e7f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "90fe7c0a",
+   "id": "44ca95d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3210,7 +3220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69ec6f5",
+   "id": "4d3c3cad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3218,7 +3228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11f649be",
+   "id": "8a497532",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3226,7 +3236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "352cd78a",
+   "id": "db801c2a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3234,7 +3244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "530a229b",
+   "id": "9798ea44",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3242,22 +3252,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "532f0f4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20b966a2",
+   "id": "4f08f6ac",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1f91a350",
+   "id": "505d09ca",
    "metadata": {},
    "source": [
     "# ---------------------------------------- STOP -------------------------------------------------------#"
@@ -3266,7 +3268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5ba79d3",
+   "id": "a4c03b27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3274,7 +3276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4da9a6e",
+   "id": "85f28ec1",
    "metadata": {},
    "outputs": [],
    "source": []
