class imbalance is fixed

--- a/game win prob/game_win_prob.ipynb
+++ b/game win prob/game_win_prob.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con =sqlite3.connect(\"C:\\\\Study\\\\1014\\\\1014\\\\NFL_Analysis\\\\nfl_2024.db\")\n",
+    "con =sqlite3.connect(\"nfl_2024.db\")\n",
     "\n",
     "sql_command = \"\"\"\n",
     "    select\n",
