added introduction to the model execution notebook

--- a/energy forecast gnn lstm/data_prep.ipynb
+++ b/energy forecast gnn lstm/data_prep.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2eb4f735-9cae-4ec9-89bf-c659ccafd757",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "This notebook utilizes data from the Dataport dataset, which provides detailed energy consumption and solar generation records for individual households. The primary goal is to explore this dataset and use it to forecast energy consumption (`grid`) and solar generation (`solar`) at the household level. Weather data and past consumption patterns are used as key predictors for this task.\n",
+    "\n",
+    "### Objectives\n",
+    "- Perform an initial exploratory analysis to understand the dataset and identify key trends and patterns.\n",
+    "- Select `grid` and `solar` as the target variables for forecasting based on their relevance and availability in the dataset.\n",
+    "- Use weather data, such as temperature, humidity, and wind speed, along with past consumption data as predictors.\n",
+    "- Prepare the data for two different neural network architectures:\n",
+    "  - **LSTM**: To capture temporal dependencies in energy consumption and solar generation.\n",
+    "  - **Graph Neural Network (GNN)**: To model relationships between households based on consumption similarity and predict demand at the household level.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7a41bc7d-c439-4628-baa4-d7e8a3c04338",
