--- a/energy forecast gnn lstm/lstm.ipynb
+++ b/energy forecast gnn lstm/lstm.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "363bb553-7a29-4d1b-99cb-694cf1a4112e",
+   "metadata": {},
+   "source": [
+    "## Model Overview\n",
+    "\n",
+    "In this project, we utilize Long Short-Term Memory (LSTM) networks to forecast energy consumption (`grid`) and solar generation (`solar`) for households. The analysis involves training LSTM models using sequential data, including weather and past consumption patterns, to predict energy demand for the next 24 hours.\n",
+    "\n",
+    "### Models Trained\n",
+    "1. **Base LSTM Model**  \n",
+    "   **Description**: This model is trained on the original dataset without any modifications.  \n",
+    "   **Purpose**: Serves as a benchmark for evaluating the effectiveness of feature engineering and model tuning.\n",
+    "\n",
+    "2. **LSTM with Enhanced Feature Set**  \n",
+    "   **Description**: This model is trained using the original dataset enriched with weather forecasts for the prediction window and additional encoded categorical features.  \n",
+    "   **Objective**: By incorporating more contextual information, this model aims to capture dependencies more effectively and improve forecasting accuracy.\n",
+    "\n",
+    "### Why Use LSTMs?\n",
+    "LSTM networks are ideal for this task because they excel at modeling temporal dependencies in sequential data:\n",
+    "- **Input**: Sequential data for past `n` days, including consumption and weather variables.  \n",
+    "- **Prediction**: Forecast energy demand (`grid`) and solar generation (`solar`) for the next 24 hours.  \n",
+    "- **Features**: Incorporates both continuous variables (e.g., temperature, wind speed) and categorical variables (e.g., hour, day of the week).  \n",
+    "\n",
+    "By leveraging their ability to learn long-term dependencies, LSTMs provide accurate forecasts based on historical and contextual data.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3dcf5525-d7d8-4625-95ee-8a97544e4dd9",
@@ -19,8 +46,10 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "train_data = np.load(\"./data/lstm/train_data.npz\")\n",
-    "test_data = np.load(\"./data/lstm/test_data.npz\")\n",
+    "#train_data = np.load(\"./data/lstm/train_data.npz\")\n",
+    "#test_data = np.load(\"./data/lstm/test_data.npz\")\n",
+    "train_data = np.load(\"E:/projects/energy forecast gnn lstm/data/lstm/train_data.npz\")\n",
+    "test_data = np.load(\"E:/projects/energy forecast gnn lstm/data/lstm/test_data.npz\")\n",
     "\n",
     "X_train_past = train_data[\"X_train_past\"]\n",
     "X_train_weather_future = train_data[\"X_train_weather_future\"]\n",
