Add GNN model for forecasting daily electricity consumption at grid level

--- a/energy forecast gnn lstm/gnn.ipynb
+++ b/energy forecast gnn lstm/gnn.ipynb
@@ -38,7 +38,8 @@
    "source": [
     "import numpy as np\n",
     "from gnn_models import *\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "import torch"
    ]
   },
   {
@@ -61,8 +62,6 @@
    "source": [
     "node_file = './data/gnn/nodes.npz'\n",
     "edge_file = './data/gnn/edges.npz'\n",
-    "import numpy as np\n",
-    "import torch\n",
     "\n",
     "# File paths\n",
     "node_file_path = './data/gnn/nodes.npz'\n",
